[package]
name = "miktactoe"
version = "0.1.0"
authors = ["mikasaurus2"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
rand = "0.8.4"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
